# landtagszusammenfasser_bawue_scraper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: anforderungen.md  architecture.md
scripts/: parlis_test.py  setup.sh  start.sh  stop.sh  verify_setup.sh
src/bawue_scraper/: __init__.py  __main__.py  config.py  orchestrator.py
src/bawue_scraper/adapters/: cache_manager.py  ics_adapter.py  logging_ltzf_client.py  ltzf_client.py  parlis_adapter.py  pdf_extractor.py
src/bawue_scraper/domain/: enums.py  models.py
src/bawue_scraper/mapping/: enum_mapper.py
src/bawue_scraper/ports/: cache.py  calendar_source.py  document_extractor.py  ltzf_api.py  vorgang_source.py
tests/: conftest.py
tests/integration/: conftest.py  test_ltzf_integration.py  test_parlis_live.py
tests/unit/: test_cache_manager.py  test_config.py  test_enum_mapper.py  test_enums.py  test_ics_adapter.py  test_ltzf_client.py  test_main.py  test_models.py  test_orchestrator.py  test_parlis_adapter.py  test_pdf_extractor.py
