[build-system]
requires = ["setuptools>=75.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bawue-scraper"
version = "0.1.0"
description = "Collector for Baden-Württemberg state parliament (PARLIS) data for the Landtagszusammenfasser platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "schneefisch" }]
dependencies = [
    "requests>=2.32",
    "lxml>=5.3",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "Pillow>=11.0",
    "icalendar>=6.0",
    "openai>=1.60",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7.4",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring a running LTZF backend",
    "slow: marks tests requiring internet access (e.g. live PARLIS)",
]
addopts = "-m 'not integration and not slow'"

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
